fix test of search 8 #11